--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ button:hover {
             <img src="cat1.jpeg"></img>
         </div>
         <div class="column" id="column2">
-            <h1 id="heading2">World</h1>
+            <h1 id="heading2">World!</h1>
             <button onclick="secondButton()">Change Me</button>
             <img src="cat2.jpg"></img>
         </div>
